<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get a Way</string>
    <string name="slogan_name">We will find a way for you</string>
    <string name="powerd_by">Powered by Karandeep Singh</string>

    <string name="firstSlideTitle">Search your Location</string>
    <string name="thirdSlideTitle">Add Missing Place</string>
    <string name="secondSlideTitle">Make A Call</string>
    <string name="fourthSlideTitle">Sit Back and Enjoy</string>

    <string name="first_slide_description">You can search a place nearby or within your City.
    </string>
    <string name="second_slide_description">We provide almost all the numbers of shops and departments registered with us.</string>
    <string name="third_slide_description">If u have a shop or store then add here</string>
    <string name="fourth_slide_description">We will handle everything for you.</string>

    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="lets_get_Started">Lets Get Started</string>

    <string name="hotels">Hotels</string>
    <string name="airports">Airports</string>
    <string name="restaurants">Restaurants</string>
    <string name="banks">Banks</string>
    <string name="shops">Shops</string>

    <string name="featurd_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured have top demands in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search"> Search....</string>

    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>

    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Buisness</string>
    <string name="retailer_Tagline">We will help you to grow your business services online !</string>
    <string name="Create_account">Create\nAccount</string>
    <string name="How_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>