<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.RetailerDashboard"
    android:background="@color/white"
    android:padding="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/black_circle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_extrabold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            android:text="@string/retailer_heading"
            android:textSize="36sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_extralight"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:text="@string/retailer_Tagline"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:onClick="callLogin"
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="Login"
                android:textColor="@color/black"
                android:transitionName="transition_login"/>

            <Button
                android:onClick="callSignup"
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="SignUp"
                android:textColor="@color/black"
                android:transitionName="transition_signup"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/How_we_work"
            android:textColor="@color/black"
            android:background="#00000000"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>


    </LinearLayout>
</ScrollView>